# swissbike

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: gpx.py  gpx_import.py  main.py  models.py  utils.py
app/providers/: elevation.py  router.py  surface.py
app/static/: app.js  index.html  style.css
docs/: app.js  index.html  scratch.js  style.css
tests/: test_main.py  test_utils.py
