[project]
name = "swissbike"
version = "3.0.4"
description = "SwissBike single-service app: FastAPI API + static frontend (no Node build)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "polyline>=2.0.2",
  "cachetools>=5.3",
  "python-multipart>=0.0.9",
]
